--- a/style.css
+++ b/style.css
@@ -3,10 +3,22 @@ button {
     border: 1px solid royalblue;
     color: white;
     border-radius: 50px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 20px;
     padding: 8px;
-    margin: 8px;
+    text-align: center;
+}
+
+#rock,
+#paper,
+#scissors {
+    margin-right: 20px;
+    padding: 10px;
+}
+
+#results {
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 700;
 }
 
 button:active {
@@ -17,9 +29,13 @@ button:hover {
     background-color: lightskyblue;
 }
 
-#main_div {
+h1 {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+p {
     font-size: large;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     background-color: rgb(158, 155, 155);
-    display: flex;
+    width: 150px;
 }
